2005-10-23  Neil Williams <linux@codehelp.co.uk>

	* debian/changelog : New upstream release.
	* debian/libqof1.install : Ensure XML schemas and new
	gettext translation is installed with libqof1.
	* qof/gnc-date.c : Fix date string conversion to work
	on broken mktime implementations.
	* qof/gnc-date.h : Deprecate gnc_date_my_last_mday
	* qof/test/test-date.c : Add more special case tests.
	* rpm/qof1.spec : Add translation to sample RPM spec
	file.
	* website/index.html : Release update.

2005-10-21  Neil Williams <linux@codehelp.co.uk>

	* qof/gnc-date.h : Deprecating qof_date_format_get_format
	* qof/gnc-trace.h : Doxygen tweak.
	* qof/guid.c : GnuCash sync.
	* ./qof/qofquery-deserial.c : Tweak - just in case someone
	tries to build it.

2005-10-21  Neil Williams <linux@codehelp.co.uk>

	* HACKING : Advice on how building / hacking
	QOF 0.6.0 differs from previous versions,
	including new requirements for packaging
	and new methods of providing CFLAGS and LIBS 
	data via pkg-config.
	* NEWS : Tweak for 0.6.0
	* QOF_MANIFEST_ENG : Tweak.
	* README : Detailing future changes in QOF and
	adding a pointer to new information in HACKING.
	* backend/README : Future plans.
	* backend/file/qof-backend-qsf.h : Trace fix.
	* backend/file/qsf-backend.c : New log method and
	tidy up initialisation of the params context.
	* backend/file/qsf-xml-map.c : Trace fix.
	* backend/file/qsf-xml.c : Removing double free.
	* configure.in : Move to 0.6.0 final.
	* debian/control : Fix override conflict.
	* doc/doxygen_main_page.c : Warn of future changes
	and new methods.
	* examples/test-qsf.c : tweak.
	* qof/Makefile.am : Temporarily make two private 
	headers public.
	* qof/gnc-date.c : Deprecating qof_date_format_get_format
	and gnc_timet_get_day_start_gdate.
	* qof/gnc-date.h : Doxygen tweaks.
	* qof/gnc-engine-util.c : GnuCash sync, cache improvements.
	* qof/gnc-engine-util.h : New cache methods. Deprecating 
	the SAFE_STRCMP_REAL and SAFE_STRCASECMP macros in favour 