@@ -1,3 +1,8 @@
+2005-11-29  Neil Williams <linux@codehelp.co.uk>
+
+	* doc/Makefile.am : Fix website symlink -
+	thanks to Toshio Kuratomi.
+
 2005-10-23  Neil Williams <linux@codehelp.co.uk>
 
 	* debian/changelog : New upstream release.
